[1.5.0-rc.2] * Fix app shell broken css * Add theme-color in manifest.json * Only async render Root app

--- a/public/css/shell.css
+++ b/public/css/shell.css
@@ -19,6 +19,12 @@
   width: 48px;
   height: 48px;
   text-align: center;
+  border: 0;
+  user-select: none;
+  text-decoration: none;
+  background-color: transparent;
+  -webkit-appearance: none;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 .shell-header button svg {
